--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#37BBAD</color>
     <color name="colorPrimaryDark">#009688</color>
     <color name="colorAccent">#FFFFFF</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
