Add some comments and refactoring

--- a/unmaterialtab/src/main/res/values/attrs.xml
+++ b/unmaterialtab/src/main/res/values/attrs.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <declare-styleable name="RoundTabView">
-        <attr name="accent" format="color" />
+    <declare-styleable name="RoundTabLayout">
+        <attr name="accent" format="color"/>
+        <attr name="cornerRadius" format="integer|string">
+            <flag name="rectangle" value="0"/>
+            <flag name="rounded" value="15"/>
+            <flag name="circle" value="50"/>
+        </attr>
+        <attr name="src" format="reference"/>
     </declare-styleable>
-
 </resources>
