--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,12 +13,13 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary" />
 
-    <com.ruslankishai.unmaterialtab.tabs.RoundTabView
+    <com.ruslankishai.unmaterialtab.tabs.RoundTabLayout
         android:id="@+id/round_tab_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        app:accent="@color/colorAccent" />
+        app:accent="@color/colorAccent"
+        app:cornerRadius="circle" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
